--- a/ExpenseBucket.EF/App.config
+++ b/ExpenseBucket.EF/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="AppDbContext" connectionString="Data Source=(localdb)\mssqllocaldb;Database=ExpenseBucket-Backend;Integrated Security=SSPI" providerName="System.Data.SqlClient" />    
+  </connectionStrings>
 </configuration>
