Added configuration and finished setting up UnitOfWork.

--- a/ExpenseBucket.EF/ExpenseBucket.EF.csproj
+++ b/ExpenseBucket.EF/ExpenseBucket.EF.csproj
@@ -49,6 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDbContext.cs" />
+    <Compile Include="Configurations\AccountConfiguration.cs" />
+    <Compile Include="Configurations\BackupConfiguration.cs" />
+    <Compile Include="Configurations\CategoryConfiguration.cs" />
+    <Compile Include="Configurations\ItemConfiguration.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
     <Compile Include="Repositories\BackupRepository.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
